# haltura-2-engine

./: .gitignore  CMakeLists.txt
include/: eng_math.h  eng_render_3d.h  eng_render_main.h  eng_transform.h  eng_util.h
include/math/: eng_transform.h
include/render/: eng_render_3d.h  eng_render_main.h
src/: eng_math.c  eng_render_3d.c  eng_render_main.c  main.c
src/math/: eng_math.c  eng_transform.c
src/render/: eng_render_3d.c  eng_render_main.c
